--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,8 +11,9 @@
     tools:context="com.example.cjcu.myapplication.MainActivity"
     android:orientation="vertical">
 
-    <ListView
+    <Spinner
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/list" />
+        android:layout_height="wrap_content"
+        android:id="@+id/spinner5"
+        android:visibility="gone" />
 </LinearLayout>
